Closed Bug 465066 Opened 16 years ago Closed 16 years ago

Geolocation MaemoLocationProvider.cpp compilation fail due missing includes

Categories

(Core :: DOM: Geolocation, defect, P3)

x86
Linux
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: romaxa, Assigned: romaxa)

Details

(Keywords: fixed1.9.1)

Attachments

(1 file)

Attached patch Build fixSplinter Review
MaemoLocationProvider.cpp: In member function `virtual nsresult nsGeoPosition::QueryInterface(const nsIID&, void**)':
MaemoLocationProvider.cpp:68: error: `GeoPosition' undeclared (first use this function)
MaemoLocationProvider.cpp:68: error: (Each undeclared identifier is reported only once for each function it appears in.)
MaemoLocationProvider.cpp:68: error: `NS_DOM_INTERFACE_MAP_ENTRY_CLASSINFO' undeclared (first use this function)
MaemoLocationProvider.cpp:69: error: expected `;' before "foundInterface"
MaemoLocationProvider.cpp: In function `void location_changed(LocationGPSDevice*, void*)':
MaemoLocationProvider.cpp:151: warning: passing `double' for converting 8 of `nsGeoPosition::nsGeoPosition(double, double, double, double, double, double, double, long long int)
Attachment #348321 - Flags: review?(doug.turner)
romaxa, why am I not seeing this?
Not sure, may be I was using dirfferent compiler with strict options..
Attachment #348321 - Flags: review?(doug.turner) → review+
Flags: blocking1.9.1?
Pushed in:
http://hg.mozilla.org/mozilla-central/rev/7ddc87fb7b4c
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Flags: blocking1.9.1? → blocking1.9.1+
Priority: -- → P3
could you also land on 1.9.1?
Assignee: nobody → romaxa
Should I have some flag about landing to 1.9.1?
Also which branch should I use ?
Attachment #348321 - Flags: approval1.9.1?
this is maemo only.  you should be able to land this on the 1.9.1 branch without any additional permission.
I hope this is the right branch... GECKO191b2_20081125_RELBRANCH
thanks romaxa!
Keywords: fixed1.9.1
Attachment #348321 - Flags: approval1.9.1?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: