Bug 465066 - Geolocation MaemoLocationProvider.cpp compilation fail due missing includes. r=doug.turner.